--- a/base.css
+++ b/base.css
@@ -4,6 +4,13 @@
     box-sizing: border-box;
 }
 
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
 :root {
     --button-height: 32px;
     --font-size: 14px;
